--- a/.github/workflows/merolagani_scraper.yml
+++ b/.github/workflows/merolagani_scraper.yml
@@ -1,44 +1,36 @@
-name: Merolagani Floorsheet Scraper
+name: Merolagani Scraper
 
 on:
   schedule:
-    # Run daily at 8:00 PM UTC (adjust time as needed)
-    - cron: '0 20 * * *'
-  workflow_dispatch:  # Allow manual triggering
-    
+    # Run daily at 6:00 AM UTC (adjust time as needed)
+    - cron: '0 6 * * *'
+  workflow_dispatch:  # Allows manual triggering
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-          cache: 'pip'
-          
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 pandas pyarrow
-          
-      - name: Run scraper
-        run: python merolagani_scraper.py
-          
-      - name: Upload scraped data
-        uses: actions/upload-artifact@v3
-        with:
-          name: floorsheet-data
-          path: floorsheet_data/
-          retention-days: 7
-          
-      - name: Commit and push if there are changes
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add floorsheet_data/
-          git commit -m "Update floorsheet data (automated)" || echo "No changes to commit"
-          git push
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4 pandas pyarrow
+    
+    - name: Run scraper
+      run: |
+        python merolagani_scraper.py
+    
+    - name: Upload scraped data
+      uses: actions/upload-artifact@v2
+      with:
+        name: floorsheet-data
+        path: floorsheet_data/
+        retention-days: 7
