--- a/.github/workflows/merolagani_scraper.yml
+++ b/.github/workflows/merolagani_scraper.yml
@@ -2,8 +2,8 @@ name: Merolagani Scraper
 
 on:
   schedule:
-    # Run daily at 6:00 AM UTC (adjust time as needed)
-    - cron: '0 6 * * *'
+    # Run at 3:35 PM Nepal time (UTC+5:45) which is 9:50 AM UTC
+    - cron: '50 9 * * 0-5'  # Sunday to Friday at 9:50 AM UTC
   workflow_dispatch:  # Allows manual triggering
     inputs:
       scrape_date:
